RESOLVED FIXED 131564
Web Replay: consolidate decoding macros used in SerializationMethods
https://bugs.webkit.org/show_bug.cgi?id=131564
Summary Web Replay: consolidate decoding macros used in SerializationMethods
Brian Burg
Reported 2014-04-11 15:24:26 PDT
too many.
Attachments
Patch (10.90 KB, patch)
2014-04-11 15:28 PDT, Brian Burg
no flags
Brian Burg
Comment 1 2014-04-11 15:28:47 PDT
WebKit Commit Bot
Comment 2 2014-04-11 15:30:34 PDT
Attachment 229166 [details] did not pass style-queue: ERROR: Source/WebCore/replay/SerializationMethods.cpp:130: _key is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] ERROR: Source/WebCore/replay/SerializationMethods.cpp:137: _key is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3 2014-04-11 17:19:51 PDT
Comment on attachment 229166 [details] Patch Clearing flags on attachment: 229166 Committed r167173: <http://trac.webkit.org/changeset/167173>
WebKit Commit Bot
Comment 4 2014-04-11 17:19:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.