Web Replay: consolidate decoding macros used in SerializationMethods https://bugs.webkit.org/show_bug.cgi?id=131564

Reviewed by Timothy Hatcher.

We can use EncodingTraits<T>::DecodedType to create a local variable
with the appropriate decoded type, rather than special casing.

* replay/SerializationMethods.cpp:
(JSC::EncodingTraits<NondeterministicInputBase>::decodeValue):
(JSC::EncodingTraits<KeypressCommand>::decodeValue):
(JSC::EncodingTraits<PlatformKeyboardEvent>::decodeValue):
(JSC::EncodingTraits<PlatformMouseEvent>::decodeValue):
(JSC::EncodingTraits<PlatformWheelEvent>::decodeValue):
(JSC::EncodingTraits<PluginData>::decodeValue):


Canonical link: https://commits.webkit.org/149641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167173 268f45cc-cd09-0410-ab3c-d52691b4dbfc